--- a/app/src/main/res/layout/fragment_network_tools.xml
+++ b/app/src/main/res/layout/fragment_network_tools.xml
@@ -208,6 +208,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/spacing_large"
+            android:visibility="gone"
             app:cardElevation="4dp">
 
             <LinearLayout
