--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -76,6 +76,11 @@
         <argument
             android:name="document_id"
             app:argType="string" />
+        <action
+            android:id="@+id/action_documentDetailFragment_to_documentScannerFragment"
+            app:destination="@id/documentScannerFragment"
+            app:popUpTo="@id/nav_graph"
+            app:popUpToInclusive="false" />
     </fragment>
 
 </navigation>
