--- a/app/src/main/res/drawable/ic_edit_crop.xml
+++ b/app/src/main/res/drawable/ic_edit_crop.xml
@@ -7,5 +7,5 @@
     android:tint="?attr/colorOnSurface">
   <path
       android:fillColor="@android:color/white"
-      android:pathData="M19,13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z" />
+      android:pathData="M17,15h2V7c0,-1.1 -0.9,-2 -2,-2H9v2h8v8zM7,17V1H5v4H1v2h4v10c0,1.1 0.9,2 2,2h10v2h2v-2H7z"/>
 </vector>
