--- a/app/src/main/res/drawable/ic_reset.xml
+++ b/app/src/main/res/drawable/ic_reset.xml
@@ -7,5 +7,8 @@
     android:tint="?attr/colorOnSurface">
   <path
       android:fillColor="@android:color/white"
-      android:pathData="M19,13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z" />
+      android:pathData="M12,6l-1.88,1.88L7,9.75 8.88,7.88 12,4.75l3.12,3.13L17,9.75 13.88,7.88z" />
+  <path
+      android:fillColor="@android:color/white"
+      android:pathData="M12,18l1.88,-1.88L17,14.25 15.12,16.13 12,19.25l-3.12,-3.13L7,14.25l3.12,1.87z" />
 </vector>
