--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -19,6 +19,7 @@
         <item name="colorErrorContainer">@color/md_theme_errorContainer</item>
         <item name="colorOnErrorContainer">@color/md_theme_onErrorContainer</item>
         <item name="colorOutline">@color/md_theme_outline</item>
+        <item name="colorOutlineVariant">@color/md_theme_outline</item>
         <item name="android:colorBackground">@color/md_theme_background</item>
         <item name="colorOnBackground">@color/md_theme_onBackground</item>
         <item name="colorSurface">@color/md_theme_surface</item>
@@ -69,6 +70,7 @@
         <item name="colorErrorContainer">@color/md_theme_errorContainer_dark</item>
         <item name="colorOnErrorContainer">@color/md_theme_onErrorContainer_dark</item>
         <item name="colorOutline">@color/md_theme_outline_dark</item>
+        <item name="colorOutlineVariant">@color/md_theme_outline_dark</item>
         <item name="android:colorBackground">@color/md_theme_background_dark</item>
         <item name="colorOnBackground">@color/md_theme_onBackground_dark</item>
         <item name="colorSurface">@color/md_theme_surface_dark</item>
