--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -96,4 +96,14 @@
         <item name="postSplashScreenTheme">@style/Theme.ProToolkit.Dark</item>
     </style>
 
+    <style name="Theme.ProToolkit.StatusBar" parent="Theme.ProToolkit">
+        <!-- Allow drawing behind status bar -->
+        <item name="android:windowTranslucentStatus">true</item>
+        <item name="android:fitsSystemWindows">true</item>
+
+        <!-- Status bar styles -->
+        <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:windowLightStatusBar">true</item> <!-- dark icons -->
+    </style>
+
 </resources>
